--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,7 @@
 [env:BoardConfig]
 platform = ststm32
-board = genericstm32f103c8
+board = genericSTM32F446RE
 framework = arduino
+
+lib_deps =
+    https://github.com/micro-ROS/micro_ros_platformio
