add light developement environnement

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,13 @@
-[env:BoardConfig]
+[env]
 platform = ststm32
 board = genericSTM32F446RE
 framework = arduino
+debug_tool = stlink
+upload_protocol = stlink
 
+[env:light]
+
+[env:with_micro_ros]
+build_flags = -D USE_MICRO_ROS
 lib_deps =
     https://github.com/micro-ROS/micro_ros_platformio
