Fix light trying to build roboguard microros

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,7 @@ debug_tool = stlink
 upload_protocol = stlink
 
 [env:light]
+lib_ignore = roboguard_micro_ros
 
 [env:with_micro_ros]
 build_flags = -D USE_MICRO_ROS
