--- a/platformio.ini
+++ b/platformio.ini
@@ -1,14 +1,18 @@
+;Common platform config, won't build on it's own
 [env]
 platform = ststm32
 board = genericSTM32F446RE
 framework = arduino
 debug_tool = stlink
 upload_protocol = stlink
+debug_build_flags = -O0 -ggdb3 -g3
 
+;Developpement version that does not require micro_ros
 [env:light]
 lib_ignore = roboguard_micro_ros
 
+;Release build including micro_ros (specific commit specified here to ensure it builds in the future, update it if you rebuild)
 [env:with_micro_ros]
 build_flags = -D USE_MICRO_ROS
 lib_deps =
-    https://github.com/micro-ROS/micro_ros_platformio
+    https://github.com/micro-ROS/micro_ros_platformio#841dc1396eb1d54d61b66781768359ed00d5de6c
