Add watchdog, include lib for board temp sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,7 @@ framework = arduino
 debug_tool = stlink
 upload_protocol = stlink
 debug_build_flags = -O0 -ggdb3 -g3
+lib_deps = adafruit/Adafruit BME680 Library@^2.0.2
 
 ;Developpement version that does not require micro_ros
 [env:light]
@@ -15,4 +16,5 @@ lib_ignore = roboguard_micro_ros
 [env:with_micro_ros]
 build_flags = -D USE_MICRO_ROS
 lib_deps =
+    adafruit/Adafruit BME680 Library@^2.0.2
     https://github.com/micro-ROS/micro_ros_platformio#841dc1396eb1d54d61b66781768359ed00d5de6c
