fix random crashes

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,12 @@ framework = arduino
 debug_tool = stlink
 upload_protocol = stlink
 debug_build_flags = -O0 -ggdb3 -g3
-lib_deps = adafruit/Adafruit BME680 Library@^2.0.2
+lib_deps =  adafruit/Adafruit BME680 Library@^2.0.2
+
+extra_scripts =
+    pre:enable_semihosting.py
+debug_extra_cmds =
+    monitor arm semihosting enable
 
 ;Developpement version that does not require micro_ros
 [env:light]
@@ -18,3 +23,5 @@ build_flags = -D USE_MICRO_ROS
 lib_deps =
     adafruit/Adafruit BME680 Library@^2.0.2
     https://github.com/micro-ROS/micro_ros_platformio#841dc1396eb1d54d61b66781768359ed00d5de6c
+
+board_microros_distro = humble
