add use-micro-ros define to precompiled config

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,4 +22,4 @@ lib_deps =
     https://github.com/micro-ROS/micro_ros_platformio#841dc1396eb1d54d61b66781768359ed00d5de6c
 
 [env:with_micro_ros_precompiled]
-    build_flags = -L./lib/micro_ros_platformio_precompiled/src/cortex-m4 -llibmicroros
+    build_flags = -D USE_MICRO_ROS -L./lib/micro_ros_platformio_precompiled/src/cortex-m4 -llibmicroros
