Work on interface, add bme

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,7 @@ framework = arduino
 debug_tool = stlink
 upload_protocol = stlink
 debug_build_flags = -O0 -ggdb3 -g3
-lib_deps =  adafruit/Adafruit BME680 Library@^2.0.2
+lib_deps =  adafruit/Adafruit BME680 Library@2.0.2
 
 ;Developpement version that does not require micro_ros
 [env:light]
